# admin-console-python

./: README.md  admin_console.py  ainput.py  main.py  setup.cfg
src/admin_console/: __init__.py  ainput.py
