[metadata]
name = admin-console
version = 1.0.0
author = NobWow
author_email = pashok15789@gmail.com
description = Interactive console for administrators
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NobWow/admin-console-python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU LGPL v2.1
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
